# Journaling

./: .gitignore  Captura de sistema de 2024-06-17 11:53:38.syscap  Captura de sistema de 2024-06-17 12:22:54.syscap  README.md  com.github.pedromiguel_dev.journaling.json  meson.build  run.sh
.flatpak-builder/cache/refs/heads/x86_64-com.github.pedromiguel_dev.journaling.json/: init
.flatpak-builder/checksums/: x86_64-com.github.pedromiguel_dev.journaling.json
data/: com.github.pedromiguel_dev.journaling.desktop.in  com.github.pedromiguel_dev.journaling.gschema.xml  com.github.pedromiguel_dev.journaling.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: MainNavigation.vala  application.vala  journaling.gresource.xml  main.vala  meson.build  window.vala
src/css/: style.css
src/pages/: Home.vala  IncrementCount.vala  LockScreen.vala
src/ui/: MainNavigation.vala  window.vala
src/ui/pages/: IncrementCount.vala  LockScreen.vala
src/utils/: MessageDialog.vala  PageWrapper.vala  PasswordManager.vala  test.vala
